博客主要功能测试
博客主要功能测试

--- a/Public/tpl/base/base.html
+++ b/Public/tpl/base/base.html
@@ -3,46 +3,156 @@
 <head>
 	<meta charset="UTF-8">
 	<title>D_bean Factory - My TED for you</title>
-	<link type="text/css" rel="stylesheet" href="__VENDOR__/bootstrap/css/bootstrap.min.css">
+<!-- 	<link type="text/css" rel="stylesheet" href="__VENDOR__/bootstrap/css/bootstrap.min.css"> -->
 	<link type="text/css" rel="stylesheet" href="__VENDOR__/font-awesome/css/font-awesome.css">
 	<link type="text/css" rel="stylesheet" href="__COMMONCSS__/all.css">
 	<block name="csszone"></block>
 	<script type="text/javascript" src="__VENDOR__/jquery-1.11.1.js"></script>
-	<script type="text/javascript" src="__VENDOR__/bootstrap/js/bootstrap.min.js"></script>
+<!--	<script type="text/javascript" src="__VENDOR__/bootstrap/js/bootstrap.min.js"></script> -->
 	<script type="text/javascript" src="__COMMONJS__/common.js"></script>
 	<block name="jszone"></block>
 </head>
 	<header>
-		<div class="logo">
-			<a href="">
-				<h1>
-					<span>B</span><span>e</span><span>a</span><span>n</span><span>z</span><span>o</span><span>n</span><span>e</span>
-				</h1>
-			</a>
-		</div>
+		<nav>
+			<div class="navigator">
+				<ul>
+					<li><a href="/">首页</a></li>
+					<li><a href="">首页</a></li>
+					<li><a href="">首页</a></li>
+					<li><a href="">首页</a></li>
+					<li><a href="">首页</a></li>
+					<li><a href="">首页</a></li>
+					<li><a href="">首页</a></li>
+				</ul>
+			</div>
+		</nav>
 	</header>
 <body>
-
-	<nav>
-		<div class="nav-left">
-			<ul class="bean">
-				<li>
-					<img src="__IMAGES__/common/bean.png" alt="">
-				</li>
-				<li >
-					<span id="user">Bean</span>
-					<span id="email">quickly3@sohu.com</span>				
-				</li>
-			</ul>
+	<div class="header">
+		<div class="banner">		
+			<div class="logo">
+				<a href="/">
+					<span>Bean</span><span>zone</span>
+				</a>
+			</div>
 		</div>
-		<div class="nav-right">
-			<input type="text" class="form-control search" placeholder="...">
-			<i class="glyphicon glyphicon-search" id="searchIcon"></i>
-		</div>
+	</div>
 
-	</nav>
 	<div class="container">
-	<block name="container"></block>
+		<div class="main row">
+		    <div class="column1 col-lg-1">
+		    </div>
+		    <div class='column2 col-lg-10' id="myBlog">
+		        <div class="leftPan col-lg-8">
+		        		<block name="leftPan"></block>
+		        </div>
+		        <div class="rightPan col-lg-4">
+		            <div class="message ">
+		                <textarea placeholder='我轻轻的来..'></textarea>
+		                <span class='b-btn b-btn-green'>留言</span>
+		            </div>
+		            <div class='dias'>
+		                <div class='dia'>
+		                    <span class='portrait'><a href=""><img src="__IMAGES__/common/bean.png" alt="" class='img-thumbnail'></a></span>
+		                    <span class='body'>
+								<span class='user'><a href="">@Superman</a>:</span>
+		                    <span>阿什顿徕卡就是第六届奥斯卡的理解爱上了大家卡时间打卡机塑料袋爱上</span>
+		                    <span class='time'>10分钟前</span>
+		                    </span>
+		                </div>
+		                <div class='dia'>
+		                    <span class='portrait'><a href=""><img src="__IMAGES__/common/bean.png" alt="" class='img-thumbnail'></a></span>
+		                    <span class='body'>
+							<span class='user'><a href="">@Superman</a>:</span>
+		                    <span>阿什顿徕卡就是第六届奥斯卡的理解爱上了大家卡时间打卡机塑料袋爱上</span>
+		                    <span class='time'>10分钟前</span>
+		                    </span>
+		                </div>
+		                <div class='dia'>
+		                    <span class='portrait'><a href=""><img src="__IMAGES__/common/bean.png" alt="" class='img-thumbnail'></a></span>
+		                    <span class='body'>
+							<span class='user'><a href="">@Superman</a>:</span>
+		                    <span>阿什顿徕卡就是第六届奥斯卡的理解爱上了大家卡时间打卡机塑料袋爱上</span>
+		                    <span class='time'>10分钟前</span>
+		                    </span>
+		                </div>
+		                <div class='dia'>
+		                    <span class='portrait'><a href=""><img src="__IMAGES__/common/bean.png" alt="" class='img-thumbnail'></a></span>
+		                    <span class='body'>
+							<span class='user'><a href="">@Superman</a>:</span>
+		                    <span>阿什顿徕卡就是第六届奥斯卡的理解爱上了大家卡时间打卡机塑料袋爱上</span>
+		                    <span class='time'>10分钟前</span>
+		                    </span>
+		                </div>
+		            </div>
+					<div class='newly'>
+						<span class="col3-title">最新文章</span>
+						<span>
+							<ul>
+								<li>
+									<a href="">关于开水煮白菜的思考研究的同一场理论和量子力学</a>
+									<a href="">关于开水煮白菜的思考研究的同一场理论和量子力学</a>
+									<a href="">关于开水煮白菜的思考研究的同一场理论和量子力学</a>
+									<a href="">关于开水煮白菜的思考研究的同一场理论和量子力学</a>
+									<a href="">关于开水煮白菜的思考研究的同一场理论和量子力学</a>
+								</li>
+							</ul>
+						</span>
+					</div>
+					<div class="pigeonhole">
+						<span class="col3-title">文章归档</span>
+						<span>
+							<ul>
+								<li>
+									<a href="">2014年七月</a>
+									<a href="">2014年八月</a>
+									<a href="">2014年九月</a>
+									<a href="">2014年十月</a>
+									<a href="">2014年十一月</a>
+									<a href="">2014年十二月</a>
+								</li>
+							</ul>
+						</span>
+					</div>
+					<div class="category">
+						<span class="col3-title">分类</span>
+						<span>
+							<ul>
+								<li>
+									<a href="">HTML5</a>
+									<a href="">CSS3</a>
+									<a href="">Javascript</a>
+									<a href="">jQuery</a>
+									<a href="">Shell</a>
+									<a href="">PHP扩展</a>
+									<a href="">Oracle</a>
+									<a href="">Mysql</a>
+									<a href="">Informix</a>
+									<a href="">PHP</a>
+									<a href="">工作小品</a>
+									<a href="">收集</a>
+									<a href="">未分类</a>
+								</li>
+							</ul>					
+						</span>
+					</div>
+					<div class="other">
+						<span class="col3-title">更多功能</span>
+						<span>
+							<ul>
+								<li>
+									<a href="">登陆</a>
+									<a href="">关于Bean</a>
+								</li>
+							</ul>					
+						</span>
+					</div>	        	
+		        </div>    
+		    </div>
+		    <div class="column3 col-lg-1">
+
+		    </div>
+		</div>
 	</div>
 
 	<footer></footer>
