--- a/Public/tpl/Home/Index/index.html
+++ b/Public/tpl/Home/Index/index.html
@@ -5,275 +5,48 @@
 </block>
 
 <block name="jszone">
+	<script type="text/javascript" src="__VENDOR__/underscore.js"></script>
+	<script type="text/javascript" src="__VENDOR__/backbone.js"></script>
+	<script type="text/javascript">
+		var posts = {$posts};
+	</script>
     <script type="text/javascript" src="{:defaultJs()}"></script>
+    <script type="text/html" class='template' id='postsTemp'>
+        <div class="blog row">
+            <div class="b-img">
+                <a href="<%=toPost%>">
+                    <img src="<%= post_preimg%>" alt="" class='img-thumbnail'>
+                </a>
+                <div class="b-info">
+                    <div class="b-date"><i class="fa fa-clock-o"></i><span><%= post_date%></span></div>
+                    <div class="b-author"><i class="fa fa-user"></i><span><%= user_name%></span></div>
+                </div>
+            </div>
+            <div class="b-post">
+                <div class="b-l1">
+                    <div class="b-label pre-cat">
+                        <div class="pre-catinner">
+                            <a href="">标签</a>
+                        </div>
+                        <div class="pre-catarrow"></div>
+                    </div>
+                    <div class="b-title">
+                        <a href="<%=toPost%>"><%= post_title%></a>
+                    </div>
+                    <div class="b-read ">
+                        <span class="badge">2000 阅</span>
+                    </div>
+                    <div class="b-comment">
+                        <span class="badge">20 评</span>
+                    </div>
+                </div>
+
+                <div class="b-content">
+                	<%= post_excerpt%>
+                </div>
+            </div>
+        </div>
+    </script>
 </block>
 
-<block name="container">
-    <div class="main row">
-        <div class="column1 col-lg-2">
 
-        </div>
-        <div class='column2 col-lg-6' id="myBlog">
-
-            <div class="blog row">
-                <div class="b-img col-lg-3">
-                    <img src="__IMAGES__/common/default.jpg" alt="" class='img-thumbnail'>
-                </div>
-                <div class="col-lg-9">
-                    <div class="b-l1">
-                        <div class="b-label pre-cat">
-                            <div class="pre-catinner">
-                                <a href="">标签</a>
-                            </div>
-                            <div class="pre-catarrow"></div>
-                        </div>
-                        <div class="b-title">
-                            <a href="">这是一个标题</a>
-                        </div>
-                        <div class="b-read ">
-                            <span class="badge">2000 阅</span>
-                        </div>
-                        <div class="b-comment">
-                            <span class="badge">20 评</span>
-                        </div>
-                    </div>
-                    <div class="b-info">
-                        <span class="b-date">9.18.2014</span> |
-                        <span class="author">周胖子</span> |
-                    </div>
-                    <div class="b-content">
-                        这是一个很长很长的故事非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非常的长
-                    </div>
-                </div>
-            </div>
-            <div class="blog row">
-                <div class="b-img col-lg-3">
-                    <img src="__IMAGES__/common/default.jpg" alt="" class='img-thumbnail'>
-                </div>
-                <div class="col-lg-9">
-                    <div class="b-l1">
-                        <div class="b-label pre-cat">
-                            <div class="pre-catinner">
-                                <a href="">标签</a>
-                            </div>
-                            <div class="pre-catarrow"></div>
-                        </div>
-                        <div class="b-title">
-                            <a href="">这是一个标题</a>
-                        </div>
-                        <div class="b-read ">
-                            <span class="badge">2000 阅</span>
-                        </div>
-                        <div class="b-comment">
-                            <span class="badge">20 评</span>
-                        </div>
-                    </div>
-                    <div class="b-info">
-                        <span class="b-date">9.18.2014</span> |
-                        <span class="author">周胖子</span> |
-                    </div>
-                    <div class="b-content">
-                        这是一个很长很长的故事非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非常的长
-                    </div>
-                </div>
-            </div>
-            <div class="blog row">
-                <div class="b-img col-lg-3">
-                    <img src="__IMAGES__/common/default.jpg" alt="" class='img-thumbnail'>
-                </div>
-                <div class="col-lg-9">
-                    <div class="b-l1">
-                        <div class="b-label pre-cat">
-                            <div class="pre-catinner">
-                                <a href="">标签</a>
-                            </div>
-                            <div class="pre-catarrow"></div>
-                        </div>
-                        <div class="b-title">
-                            <a href="">这是一个标题</a>
-                        </div>
-                        <div class="b-read ">
-                            <span class="badge">2000 阅</span>
-                        </div>
-                        <div class="b-comment">
-                            <span class="badge">20 评</span>
-                        </div>
-                    </div>
-                    <div class="b-info">
-                        <span class="b-date">9.18.2014</span> |
-                        <span class="author">周胖子</span> |
-                    </div>
-                    <div class="b-content">
-                        这是一个很长很长的故事非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非常的长
-                    </div>
-                </div>
-            </div>
-            <div class="blog row">
-                <div class="b-img col-lg-3">
-                    <img src="__IMAGES__/common/default.jpg" alt="" class='img-thumbnail'>
-                </div>
-                <div class="col-lg-9">
-                    <div class="b-l1">
-                        <div class="b-label pre-cat">
-                            <div class="pre-catinner">
-                                <a href="">标签</a>
-                            </div>
-                            <div class="pre-catarrow"></div>
-                        </div>
-                        <div class="b-title">
-                            <a href="">这是一个标题</a>
-                        </div>
-                        <div class="b-read ">
-                            <span class="badge">2000 阅</span>
-                        </div>
-                        <div class="b-comment">
-                            <span class="badge">20 评</span>
-                        </div>
-                    </div>
-                    <div class="b-info">
-                        <span class="b-date">9.18.2014</span> |
-                        <span class="author">周胖子</span> |
-                    </div>
-                    <div class="b-content">
-                        这是一个很长很长的故事非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非常的长
-                    </div>
-                </div>
-            </div>
-            <div class="blog row">
-                <div class="b-img col-lg-3">
-                    <img src="__IMAGES__/common/default.jpg" alt="" class='img-thumbnail'>
-                </div>
-                <div class="col-lg-9">
-                    <div class="b-l1">
-                        <div class="b-label pre-cat">
-                            <div class="pre-catinner">
-                                <a href="">标签</a>
-                            </div>
-                            <div class="pre-catarrow"></div>
-                        </div>
-                        <div class="b-title">
-                            <a href="">这是一个标题</a>
-                        </div>
-                        <div class="b-read ">
-                            <span class="badge">2000 阅</span>
-                        </div>
-                        <div class="b-comment">
-                            <span class="badge">20 评</span>
-                        </div>
-                    </div>
-                    <div class="b-info">
-                        <span class="b-date">9.18.2014</span> |
-                        <span class="author">周胖子</span> |
-                    </div>
-                    <div class="b-content">
-                        这是一个很长很长的故事非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非非常非常的长
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="column3 col-lg-4">
-            <div class="message ">
-                <textarea placeholder='我轻轻的来..'></textarea>
-                <span class='b-btn b-btn-green'>留言</span>
-            </div>
-            <div class='dias'>
-                <div class='dia'>
-                    <span class='portrait'><a href=""><img src="__IMAGES__/common/bean.png" alt="" class='img-thumbnail'></a></span>
-                    <span class='body'>
-						<span class='user'><a href="">@Superman</a>:</span>
-                    <span>阿什顿徕卡就是第六届奥斯卡的理解爱上了大家卡时间打卡机塑料袋爱上</span>
-                    <span class='time'>10分钟前</span>
-                    </span>
-                </div>
-                <div class='dia'>
-                    <span class='portrait'><a href=""><img src="__IMAGES__/common/bean.png" alt="" class='img-thumbnail'></a></span>
-                    <span class='body'>
-					<span class='user'><a href="">@Superman</a>:</span>
-                    <span>阿什顿徕卡就是第六届奥斯卡的理解爱上了大家卡时间打卡机塑料袋爱上</span>
-                    <span class='time'>10分钟前</span>
-                    </span>
-                </div>
-                <div class='dia'>
-                    <span class='portrait'><a href=""><img src="__IMAGES__/common/bean.png" alt="" class='img-thumbnail'></a></span>
-                    <span class='body'>
-					<span class='user'><a href="">@Superman</a>:</span>
-                    <span>阿什顿徕卡就是第六届奥斯卡的理解爱上了大家卡时间打卡机塑料袋爱上</span>
-                    <span class='time'>10分钟前</span>
-                    </span>
-                </div>
-                <div class='dia'>
-                    <span class='portrait'><a href=""><img src="__IMAGES__/common/bean.png" alt="" class='img-thumbnail'></a></span>
-                    <span class='body'>
-					<span class='user'><a href="">@Superman</a>:</span>
-                    <span>阿什顿徕卡就是第六届奥斯卡的理解爱上了大家卡时间打卡机塑料袋爱上</span>
-                    <span class='time'>10分钟前</span>
-                    </span>
-                </div>
-            </div>
-			<div class='newly'>
-				<span class="col3-title">最新文章</span>
-				<span>
-					<ul>
-						<li>
-							<a href="">关于开水煮白菜的思考研究的同一场理论和量子力学</a>
-							<a href="">关于开水煮白菜的思考研究的同一场理论和量子力学</a>
-							<a href="">关于开水煮白菜的思考研究的同一场理论和量子力学</a>
-							<a href="">关于开水煮白菜的思考研究的同一场理论和量子力学</a>
-							<a href="">关于开水煮白菜的思考研究的同一场理论和量子力学</a>
-						</li>
-					</ul>
-				</span>
-			</div>
-			<div class="pigeonhole">
-				<span class="col3-title">文章归档</span>
-				<span>
-					<ul>
-						<li>
-							<a href="">2014年七月</a>
-							<a href="">2014年八月</a>
-							<a href="">2014年九月</a>
-							<a href="">2014年十月</a>
-							<a href="">2014年十一月</a>
-							<a href="">2014年十二月</a>
-						</li>
-					</ul>
-				</span>
-			</div>
-			<div class="category">
-				<span class="col3-title">分类</span>
-				<span>
-					<ul>
-						<li>
-							<a href="">HTML5</a>
-							<a href="">CSS3</a>
-							<a href="">Javascript</a>
-							<a href="">jQuery</a>
-							<a href="">Shell</a>
-							<a href="">PHP扩展</a>
-							<a href="">Oracle</a>
-							<a href="">Mysql</a>
-							<a href="">Informix</a>
-							<a href="">PHP</a>
-							<a href="">工作小品</a>
-							<a href="">收集</a>
-							<a href="">未分类</a>
-						</li>
-					</ul>					
-				</span>
-			</div>
-			<div class="other">
-				<span class="col3-title">更多功能</span>
-				<span>
-					<ul>
-						<li>
-							<a href="">登陆</a>
-							<a href="">关于Bean</a>
-						</li>
-					</ul>					
-				</span>
-			</div>
-        </div>
-    </div>
-
-
-</block>
