--- a/Public/tpl/base/base.html
+++ b/Public/tpl/base/base.html
@@ -7,10 +7,6 @@
 	<link type="text/css" rel="stylesheet" href="__VENDOR__/font-awesome/css/font-awesome.css">
 	<link type="text/css" rel="stylesheet" href="__COMMONCSS__/all.css">
 	<block name="csszone"></block>
-	<script type="text/javascript" src="__VENDOR__/jquery-1.11.1.js"></script>
-<!--	<script type="text/javascript" src="__VENDOR__/bootstrap/js/bootstrap.min.js"></script> -->
-	<script type="text/javascript" src="__COMMONJS__/common.js"></script>
-	<block name="jszone"></block>
 </head>
 	<header>
 		<nav>
@@ -155,6 +151,12 @@
 		</div>
 	</div>
 
-	<footer></footer>
+	<footer>
+	<script type="text/javascript" src="__VENDOR__/jquery-1.11.1.js"></script>
+<!--	<script type="text/javascript" src="__VENDOR__/bootstrap/js/bootstrap.min.js"></script> -->
+	<script type="text/javascript" src="__COMMONJS__/common.js"></script>
+	<block name="jszone"></block>		
+		
+	</footer>
 </body>
 </html>
