--- a/Public/tpl/Admin/Index/login.html
+++ b/Public/tpl/Admin/Index/login.html
@@ -14,7 +14,7 @@
 				}
 			$.post(url,data,function(res){
 				if(res&&res.sta == 1){
-					history.go(-1);
+					location.href = '/Admin/Index/index'; 
 				}else{
 					alert('login failed')
 				}
