--- a/Public/tpl/base/admin.html
+++ b/Public/tpl/base/admin.html
@@ -1,47 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>D_bean Factory - My TED for you</title>
-<!-- 	<link type="text/css" rel="stylesheet" href="__VENDOR__/bootstrap/css/bootstrap.min.css"> -->
-	<link type="text/css" rel="stylesheet" href="__VENDOR__/font-awesome/css/font-awesome.css">
-	<link type="text/css" rel="stylesheet" href="__COMMONCSS__/all.css">
-	<block name="csszone"></block>
-	<script type="text/javascript" src="__VENDOR__/jquery-1.11.1.js"></script>
-<!--	<script type="text/javascript" src="__VENDOR__/bootstrap/js/bootstrap.min.js"></script> -->
-	<script type="text/javascript" src="__COMMONJS__/common.js"></script>
-	<block name="jszone"></block>
+    <meta charset="UTF-8">
+    <title>D_bean Factory - My TED for you</title>
+    <!-- 	<link type="text/css" rel="stylesheet" href="__VENDOR__/bootstrap/css/bootstrap.min.css"> -->
+    <link type="text/css" rel="stylesheet" href="__VENDOR__/font-awesome/css/font-awesome.css">
+    <link type="text/css" rel="stylesheet" href="__COMMONCSS__/admin.css">
+    <block name="csszone"></block>
+    <script type="text/javascript" src="__VENDOR__/jquery-1.11.1.js"></script>
+    <!--	<script type="text/javascript" src="__VENDOR__/bootstrap/js/bootstrap.min.js"></script> -->
+    <script type="text/javascript" src="__COMMONJS__/admin.js"></script>
+    <block name="jszone"></block>
 </head>
-	<header>
-		<nav>
-			<div class="navigator">
-				<ul>
-					<li><a href="/">首页</a></li>
-					<li><a href="">首页</a></li>
-					<li><a href="">首页</a></li>
-					<li><a href="">首页</a></li>
-					<li><a href="">首页</a></li>
-					<li><a href="">首页</a></li>
-					<li><a href="">首页</a></li>
-				</ul>
-			</div>
-		</nav>
-	</header>
+<header>
+    <nav>
+        <div class="navigator">
+            <ul class='nav-left'>
+                <li><a href="/">Bean<span class='nav-red'>zone</span></a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</header>
+
 <body>
-	<div class="header">
-		<div class="banner">		
-			<div class="logo">
-				<a href="/">
-					<span>Bean</span><span>zone</span>
-				</a>
-			</div>
-		</div>
-	</div>
+    <div class="page-container">
+        <div class="sidebar">
+            <ul>
+                <li>
+                	<a href="">博客</a>
+                    <ul>
+						<li><a href="/Admin/Blog/create">写新博客</a></li>
+						<li><a href=""></a></li>
+						<li><a href=""></a></li>
+						<li><a href=""></a></li>
+                    </ul>
+                </li>
+                <li>
+                	<a href="">项目管理</a>
+                    <ul>
+						<li><a href="/Admin/Project/addItem">添加条目</a></li>
+						<li><a href=""></a></li>
+						<li><a href=""></a></li>
+						<li><a href=""></a></li>
+                    </ul>
+                </li>
+                <li><a href="">test</a>
+                </li>
+                <li><a href="">test</a>
+                </li>
+                <li><a href="">test</a>
+                </li>
+                <li><a href="">test</a>
+                </li>
+                <li><a href="">test</a>
+                </li>
+                <li><a href="">test</a>
+                </li>
+                <li><a href="">退出登录</a>
+                </li>
+            </ul>
+        </div>
+        <block name="main">
 
-	<div class="container">
-		<block name="container"></block>
-	</div>
-
-	<footer></footer>
+        </block>
+    </div>
 </body>
+
 </html>
