--- a/Public/tpl/base/base.html
+++ b/Public/tpl/base/base.html
@@ -18,7 +18,7 @@
 					<li><a href="">首页</a></li>
 					<li><a href="">首页</a></li>
 					<li><a href="">首页</a></li>
-					<li><a href="">首页</a></li>
+					<li><a href="/Admin/Index/index">后台</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -152,11 +152,11 @@
 	</div>
 
 	<footer>
-	<script type="text/javascript" src="__VENDOR__/jquery-1.11.1.js"></script>
+	<script type="text/javascript" src="http://cdn.bootcss.com/jquery/1.11.2/jquery.js"></script>
 <!--	<script type="text/javascript" src="__VENDOR__/bootstrap/js/bootstrap.min.js"></script> -->
 	<script type="text/javascript" src="__COMMONJS__/common.js"></script>
 	<block name="jszone"></block>		
-		
+
 	</footer>
 </body>
 </html>
