--- a/Public/tpl/base/base.html
+++ b/Public/tpl/base/base.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>D_bean Factory - My TED for you</title>
 <!-- 	<link type="text/css" rel="stylesheet" href="__VENDOR__/bootstrap/css/bootstrap.min.css"> -->
-	<link type="text/css" rel="stylesheet" href="__VENDOR__/font-awesome/css/font-awesome.css">
+	<link type="text/css" rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.2.0/css/<font-awesome class="min css"></font-awesome>">
 	<link type="text/css" rel="stylesheet" href="__COMMONCSS__/all.css">
 	<block name="csszone"></block>
 </head>
