正式发布前提交测试

--- a/Public/tpl/Home/Index/index.html
+++ b/Public/tpl/Home/Index/index.html
@@ -8,9 +8,7 @@
 	<script type="text/javascript" src="http://cdn.bootcss.com/underscore.js/1.7.0/underscore.js"></script>
 	<script type="text/javascript" src="http://cdn.bootcss.com/backbone.js/1.1.2/backbone-min.js"></script>
 	<script type="text/javascript">
-		var posts = {$posts},
-            lastPosts = {$lastPosts},
-            pigeonhole = {$pigeonhole};
+		var phpRet = {$phpRet};
 	</script>
     <script type="text/javascript" src="{:defaultJs()}"></script>
     <script type="text/html" class='template' id='postsTemp'>
