--- a/Public/tpl/Home/Index/post.html
+++ b/Public/tpl/Home/Index/post.html
@@ -8,9 +8,7 @@
 	<script type="text/javascript" src="__VENDOR__/underscore.js"></script>
 	<script type="text/javascript" src="__VENDOR__/backbone.js"></script>
 	<script type="text/javascript">
-		var posts = {$posts},
-		    lastPosts = {$lastPosts},
-            pigeonhole = {$pigeonhole};
+		var phpRet = {$phpRet};
 	</script>
     <script type="text/javascript" src="{:defaultJs()}"></script>
     <script type="text/html" class='template' id='postsTemp'>
