--- a/Public/tpl/base/admin.html
+++ b/Public/tpl/base/admin.html
@@ -57,7 +57,7 @@
                 </li>
                 <li><a href="">test</a>
                 </li>
-                <li><a href="">退出登录</a>
+                <li><a href="/Admin/Index/logout">退出登录</a>
                 </li>
             </ul>
         </div>
