--- a/Public/tpl/base/base.html
+++ b/Public/tpl/base/base.html
@@ -13,11 +13,6 @@
 			<div class="navigator">
 				<ul>
 					<li><a href="/">首页</a></li>
-					<li><a href="">首页</a></li>
-					<li><a href="">首页</a></li>
-					<li><a href="">首页</a></li>
-					<li><a href="">首页</a></li>
-					<li><a href="">首页</a></li>
 					<li><a href="/Admin/Index/index">后台</a></li>
 				</ul>
 			</div>
@@ -132,7 +127,7 @@
 						<span>
 							<ul>
 								<li>
-									<a href="">登陆</a>
+									<a href="/Admin/Index/index">登陆</a>
 									<a href="">关于Bean</a>
 								</li>
 							</ul>					
