--- a/Public/tpl/base/admin.html
+++ b/Public/tpl/base/admin.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>D_bean Factory - My TED for you</title>
+    <link rel="shortcut icon" href="/favicon.ico">
     <link type="text/css" rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link type="text/css" rel="stylesheet" href="__COMMONCSS__/admin.css">
