--- a/Public/tpl/Home/Index/post.html
+++ b/Public/tpl/Home/Index/post.html
@@ -5,8 +5,8 @@
 </block>
 
 <block name="jszone">
-	<script type="text/javascript" src="__VENDOR__/underscore.js"></script>
-	<script type="text/javascript" src="__VENDOR__/backbone.js"></script>
+	<script type="text/javascript" src="http://cdn.bootcss.com/underscore.js/1.7.0/underscore.js"></script>
+	<script type="text/javascript" src="http://cdn.bootcss.com/backbone.js/1.1.2/backbone-min.js"></script>
 	<script type="text/javascript">
 		var phpRet = {$phpRet};
 	</script>
